--- a/app/app/src/main/res/values/dimens.xml
+++ b/app/app/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="search_large_text">16sp</dimen>
     <dimen name="search_medium_text">14sp</dimen>
     <dimen name="search_small_text">12sp</dimen>
+    <dimen name="search_elevation">8dp</dimen>
     <!-- we use same text dimensions and side margin as in home page -->
         <!-- list item -->
         <dimen name="search_text_top">8dp</dimen>
@@ -53,8 +54,8 @@
         <dimen name="search_text_start_margin">16dp</dimen>
         <!-- toolbar -->
         <dimen name="search_toolbar_height">90dp</dimen>
-        <dimen name="search_box_radius">25dp</dimen>
-        <dimen name="search_box_height">50dp</dimen>
+        <dimen name="search_box_radius">28dp</dimen>
+        <dimen name="search_box_height">56dp</dimen>
         <dimen name="search_icon_padding">8dp</dimen>
         <dimen name="search_toolbar_inner_vertical_margin">16dp</dimen>
         <!-- back button -->
